Add dev mockups page

--- a/data/locale.yml
+++ b/data/locale.yml
@@ -328,3 +328,7 @@ landing:
 
 _404:
   page_not_found: Page not found.
+
+easter_egg:
+
+  title: Two brothers Sean and Daniel Diaz, 16 and 9, are forced to run away from home after a tragic incident in Seattle.
